--- a/techtable_webapp/techtable/templates/techtable/candidate-detail.html
+++ b/techtable_webapp/techtable/templates/techtable/candidate-detail.html
@@ -9,7 +9,7 @@
 
 
 <!-- Page Title start -->
-<div class="pageTitle">
+<section id="pageTitle">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-6">
@@ -20,20 +20,20 @@
       </div>
     </div>
   </div>
-</div>
+</section>
 <!-- Page Title End -->
 
-<div class="listpgWraper">
-  <div class="container"> 
-    
+<section id="listpgWraper">
+  <div class="container">
+
     <!-- Job Header start -->
     <div class="job-header">
       <div class="jobinfo">
         <div class="row">
-          <div class="col-md-8 col-sm-8"> 
+          <div class="col-md-8 col-sm-8">
             <!-- Candidate Info -->
             <div class="candidateinfo">
-              <div class="userPic"><img src="{% static 'techtable/img/candidates/01.jpg' %}" alt=""></div>
+              <div class="userPic"><img src="images/candidates/01.jpg" alt=""></div>
               <div class="title">Elliot Scott</div>
               <div class="desi">Senior Data Analytist</div>
               <div class="loctext"><i class="fa fa-history" aria-hidden="true"></i> Member Since, Aug 14, 2016</div>
@@ -41,7 +41,7 @@
               <div class="clearfix"></div>
             </div>
           </div>
-          <div class="col-md-4 col-sm-4"> 
+          <div class="col-md-4 col-sm-4">
             <!-- Candidate Contact -->
             <div class="candidateinfo">
               <div class="loctext"><i class="fa fa-phone" aria-hidden="true"></i> (+1) 123.456.7890</div>
@@ -52,14 +52,14 @@
           </div>
         </div>
       </div>
-      
+
       <!-- Buttons -->
       <div class="jobButtons"> <a href="#." class="btn apply"><i class="fa fa-paper-plane" aria-hidden="true"></i> Hire Me</a> <a href="#." class="btn"><i class="fa fa-download" aria-hidden="true"></i> Download CV</a> <a href="#." class="btn"><i class="fa fa-envelope" aria-hidden="true"></i> Send Message</a> <a href="#." class="btn"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save User</a> <a href="#." class="btn report"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report Abuse</a> </div>
     </div>
-    
+
     <!-- Job Detail start -->
     <div class="row">
-      <div class="col-md-8"> 
+      <div class="col-md-8">
         <!-- About Employee start -->
         <div class="job-header">
           <div class="contentbox">
@@ -75,7 +75,7 @@
             </ul>
           </div>
         </div>
-        
+
         <!-- Education start -->
         <div class="job-header">
           <div class="contentbox">
@@ -108,7 +108,7 @@
             </ul>
           </div>
         </div>
-        
+
         <!-- Experience start -->
         <div class="job-header">
           <div class="contentbox">
@@ -116,7 +116,7 @@
             <ul class="experienceList">
               <li>
                 <div class="row">
-                  <div class="col-md-2"><img src="{% static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
+                  <div class="col-md-2"><img src="{%static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
                   <div class="col-md-10">
                     <h4>Company Name</h4>
                     <div class="row">
@@ -129,7 +129,7 @@
               </li>
               <li>
                 <div class="row">
-                  <div class="col-md-2"><img src="{% static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
+                  <div class="col-md-2"><img src="{%static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
                   <div class="col-md-10">
                     <h4>Company Name</h4>
                     <div class="row">
@@ -142,7 +142,7 @@
               </li>
               <li>
                 <div class="row">
-                  <div class="col-md-2"><img src="{% static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
+                  <div class="col-md-2"><img src="{%static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
                   <div class="col-md-10">
                     <h4>Company Name</h4>
                     <div class="row">
@@ -156,16 +156,16 @@
             </ul>
           </div>
         </div>
-        
+
         <!-- Portfolio start -->
         <div class="job-header">
           <div class="contentbox">
             <h3>Portfolio</h3>
             <ul class="row userPortfolio">
               <li class="col-md-6 col-sm-6">
-                <div class="imgbox"><img src="{% static 'techtable/img/portfolio/portfolio-img1.jpg' %}" alt="your alt text">
+                <div class="imgbox"><img src="{%static 'techtable/img/portfolio/portfolio-img1.jpg' %}" alt="your alt text">
                   <div class="itemHover">
-                    <div class="zoombox"><a href="#" title="{% static 'techtable/img/portfolio/portfolio-img1' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
+                    <div class="zoombox"><a href="#" title="{%static 'techtable/img/portfolio/portfolio-img1' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
                     <div class="infoItem">
                       <div class="itemtitle">
                         <h5>Title Here</h5>
@@ -176,9 +176,9 @@
                 </div>
               </li>
               <li class="col-md-6 col-sm-6">
-                <div class="imgbox"><img src="{% static 'techtable/img/portfolio/portfolio-img2.jpg' %}" alt="your alt text">
+                <div class="imgbox"><img src="{%static 'techtable/img/portfolio/portfolio-img2.jpg' %}" alt="your alt text">
                   <div class="itemHover">
-                    <div class="zoombox"><a href="#" title="{% static 'techtable/img/portfolio/portfolio-img2' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
+                    <div class="zoombox"><a href="#" title="{%static 'techtable/img/portfolio/portfolio-img2' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
                     <div class="infoItem">
                       <div class="itemtitle">
                         <h5>Title Here</h5>
@@ -189,9 +189,9 @@
                 </div>
               </li>
               <li class="col-md-6 col-sm-6">
-                <div class="imgbox"><img src="{% static 'techtable/img/portfolio/portfolio-img3.jpg' %}" alt="your alt text">
+                <div class="imgbox"><img src="{%static 'techtable/img/portfolio-img3.jpg' %}" alt="your alt text">
                   <div class="itemHover">
-                    <div class="zoombox"><a href="#" title="{% static 'techtable/img/portfolio/portfolio-img3' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
+                    <div class="zoombox"><a href="#" title="images/portfolio/portfolio-img3" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
                     <div class="infoItem">
                       <div class="itemtitle">
                         <h5>Title Here</h5>
@@ -202,9 +202,9 @@
                 </div>
               </li>
               <li class="col-md-6 col-sm-6">
-                <div class="imgbox"><img src="{% static 'techtable/img/portfolio/portfolio-img4.jpg' %}" alt="your alt text">
+                <div class="imgbox"><img src="{%static 'techtable/img/portfolio/portfolio-img4.jpg' %}" alt="your alt text">
                   <div class="itemHover">
-                    <div class="zoombox"><a href="#" title="{% static 'techtable/img/portfolio/portfolio-img4' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
+                    <div class="zoombox"><a href="#" title="{%static 'techtable/img/portfolio/portfolio-img4' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
                     <div class="infoItem">
                       <div class="itemtitle">
                         <h5>Title Here</h5>
@@ -215,9 +215,9 @@
                 </div>
               </li>
               <li class="col-md-6 col-sm-6">
-                <div class="imgbox"><img src="{% static 'techtable/img/portfolio/portfolio-img5.jpg' %}" alt="your alt text">
+                <div class="imgbox"><img src="{%static 'techtable/img/portfolio/portfolio-img5.jpg' %}" alt="your alt text">
                   <div class="itemHover">
-                    <div class="zoombox"><a href="#" title="{% static 'techtable/img/portfolio/portfolio-img5' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
+                    <div class="zoombox"><a href="#" title="{%static 'techtable/img/portfolio/portfolio-img5' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
                     <div class="infoItem">
                       <div class="itemtitle">
                         <h5>Title Here</h5>
@@ -228,9 +228,9 @@
                 </div>
               </li>
               <li class="col-md-6 col-sm-6">
-                <div class="imgbox"><img src="{% static 'techtable/img/portfolio/portfolio-img6.jpg' %}" alt="your alt text">
+                <div class="imgbox"><img src="{%static 'techtable/img/portfolio/portfolio-img6.jpg' %}" alt="your alt text">
                   <div class="itemHover">
-                    <div class="zoombox"><a href="#" title="{% static 'techtable/img/portfolio/portfolio-img6' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
+                    <div class="zoombox"><a href="#" title="{%static 'techtable/img/portfolio/portfolio-img6' %}" class="item-zoom fancybox-effects-a"><i class="fa fa-search" aria-hidden="true"></i></a> <a href="#" rel="nofollow" class="item-zoom" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a> </div>
                     <div class="infoItem">
                       <div class="itemtitle">
                         <h5>Title Here</h5>
@@ -244,7 +244,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4"> 
+      <div class="col-md-4">
         <!-- Candidate Detail start -->
         <div class="job-header">
           <div class="jobdetail">
@@ -273,12 +273,12 @@
             </ul>
           </div>
         </div>
-        
+
         <!-- Google Map start -->
         <div class="job-header">
           <div class="jobdetail">
             <h3>Skills</h3>
-            <div class="skillswrap"> 
+            <div class="skillswrap">
               <!-- Skill -->
               <h5>Photoshop</h5>
               <div class="progress">
@@ -312,7 +312,7 @@
             </div>
           </div>
         </div>
-        
+
         <!-- Contact Company start -->
         <div class="job-header">
           <div class="jobdetail">
@@ -340,23 +340,7 @@
       </div>
     </div>
   </div>
-</div>
+</section>
 
 
-<!--Copyright-->
-<div class="copyright">
-  <div class="container">
-    <div class="bttxt">Copyright &copy; 2017 Your Company Name. All Rights Reserved. Design by: <a href="http://graphicriver.net/user/ecreativesol" target="_blank">eCreativeSolutions</a></div>
-  </div>
-</div>
-
-<!-- Bootstrap's JavaScript --> 
-<script src="{% static 'techtable/js/jquery-2.1.4.min.js' %}"></script>
-<script src="{% static 'techtable/js/bootstrap.min.js' %}"></script>
-
-<!-- Owl carousel --> 
-<script src="{% static 'techtable/js/owl.carousel.js' %}"></script>
-
-<!-- Custom js --> 
-<script src="{% static 'techtable/js/script.js' %}"></script>
 {% endblock %}
