--- a/techtable_webapp/techtable/templates/techtable/companydashboard.html
+++ b/techtable_webapp/techtable/templates/techtable/companydashboard.html
@@ -33,7 +33,7 @@
           <div class="col-md-8 col-sm-8"> 
             <!-- Candidate Info -->
             <div class="candidateinfo">
-              <div class="userPic"><img src="images/employers/emplogo1.jpg" alt=""></div>
+              <div class="userPic"><img src="{%static 'techtable/img/employers/emplogo1.jpg' %}" alt=""></div>
               <div class="title">Company Name</div>
               <div class="desi">Web Development Company</div>
               <div class="loctext"><i class="fa fa-history" aria-hidden="true"></i> Member Since, Aug 14, 2016</div>
@@ -54,7 +54,7 @@
       </div>
       
       <!-- Buttons -->
-      <div class="jobButtons"> <a href="#." class="btn apply"><i class="fa fa-paper-plane" aria-hidden="true"></i> Join Us</a> <a href="#." class="btn"><i class="fa fa-envelope" aria-hidden="true"></i> Send Message</a> <a href="#." class="btn"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save This Company</a> <a href="#." class="btn report"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report Abuse</a> </div>
+<!--      <div class="jobButtons"> <a href="#." class="btn apply"><i class="fa fa-paper-plane" aria-hidden="true"></i> Join Us</a> <a href="#." class="btn"><i class="fa fa-envelope" aria-hidden="true"></i> Send Message</a> <a href="#." class="btn"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save This Company</a> <a href="#." class="btn report"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report Abuse</a> </div>-->
     </div>
     
     <!-- Job Detail start -->
@@ -84,7 +84,7 @@
             <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="images/jobs/jobimg.jpg" alt="Job Name"></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name"></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -104,7 +104,7 @@
             <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="images/jobs/jobimg.jpg" alt="Job Name"></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name"></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -112,9 +112,9 @@
                 </div>
                 <div class="clearfix"></div>
               </div>
-              <div class="col-md-4 col-sm-4">
-                <div class="listbtn"><a href="#.">Apply Now</a></div>
-              </div>
+<!--              <div class="col-md-4 col-sm-4">-->
+<!--                <div class="listbtn"><a href="#.">Apply Now</a></div>-->
+<!--              </div>-->
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce venenatis arcu est. Phasellus vel dignissim tellus. Aenean fermentum fermentum convallis.</p>
           </li>
@@ -124,7 +124,7 @@
             <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="images/jobs/jobimg.jpg" alt="Job Name"></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name"></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -132,9 +132,9 @@
                 </div>
                 <div class="clearfix"></div>
               </div>
-              <div class="col-md-4 col-sm-4">
-                <div class="listbtn"><a href="#.">Apply Now</a></div>
-              </div>
+<!--              <div class="col-md-4 col-sm-4">-->
+<!--                <div class="listbtn"><a href="#.">Apply Now</a></div>-->
+<!--              </div>-->
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce venenatis arcu est. Phasellus vel dignissim tellus. Aenean fermentum fermentum convallis.</p>
           </li>
@@ -199,7 +199,5 @@
     </div>
   </div>
 </section>
-
-
 
 {% endblock %}
