--- a/techtable_webapp/techtable/templates/techtable/edit-profile.html
+++ b/techtable_webapp/techtable/templates/techtable/edit-profile.html
@@ -9,7 +9,7 @@
 
 
 <!-- Page Title start -->
-<section id="pageTitle">
+<div class="pageTitle">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-6">
@@ -20,16 +20,16 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 <!-- Page Title End -->
 
-<section id="listpgWraper">
+<div class="listpgWraper">
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div class="userccount">
-          <div class="formpanel">
-
+          <div class="formpanel"> 
+            
             <!-- Personal Information -->
             <h5>Personal Information</h5>
             <div class="row">
@@ -136,7 +136,7 @@
               </div>
             </div>
             <hr>
-
+            
             <!-- Skills -->
             <h5>Skills</h5>
             <div class="row">
@@ -150,13 +150,13 @@
                   <input type="text" name="skilllevel" class="form-control" placeholder="Skill Level in %">
                 </div>
               </div>
-            </div>
+            </div>About About About
             <a href="#.">Add Other</a>
             <hr>
-
+            
             <!-- Education -->
             <h5>Education</h5>
-            <div class="row">
+            <div class="row">About
               <div class="col-md-6">
                 <div class="formrow">
                   <input type="text" name="degreename" class="form-control" placeholder="Degree Name">
@@ -175,7 +175,7 @@
             </div>
             <a href="#.">Add Other</a>
             <hr>
-
+            
             <!-- Experience -->
             <h5>Experience</h5>
             <div class="row">
@@ -228,7 +228,7 @@
             </div>
             <a href="#.">Add Other</a>
             <hr>
-
+            
             <!-- Portfolio -->
             <h5>Portfolio</h5>
             <div class="row">
@@ -276,7 +276,7 @@
             </div>
             <a href="#.">Add Other</a>
             <hr>
-
+            
             <!-- Social -->
             <h5>Social</h5>
             <div class="row">
@@ -318,24 +318,7 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 
-
-<!--Copyright-->
-<section id="copyright">
-  <div class="container">
-    <div class="bttxt">Copyright &copy; 2017 Your Company Name. All Rights Reserved. Design by: <a href="http://graphicriver.net/user/ecreativesol" target="_blank">eCreativeSolutions</a></div>
-  </div>
-</section>
-
-<!-- Bootstrap's JavaScript --> 
-<script src="{% static 'techtable/js/jquery-2.1.4.min.js' %}"></script>
-<script src="{% static 'techtable/js/bootstrap.min.js' %}"></script>
-
-<!-- Owl carousel --> 
-<script src="{% static 'techtable/js/owl.carousel.js' %}"></script>
-
-<!-- Custom js --> 
-<script src="{% static 'techtable/js/script.js' %}"></script>
 
 {% endblock %}
