--- a/techtable_webapp/account/templates/account/header.html
+++ b/techtable_webapp/account/templates/account/header.html
@@ -1,39 +1,44 @@
 <!-- SCROLL TOP BUTTON -->
-    <a class="scrollToTop" href="#"></a>
+<a class="scrollToTop" href="#"></a>
     <!-- END SCROLL TOP BUTTON -->
+
+    <!--=========== BEGIN HEADER SECTION ================-->
 <header id="header">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2 col-sm-3 col-xs-12"> <a href="index.html" class="logo"><img width="300px" src="{% static 'techtable/img/logo_name.png" alt="" /></a>
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+  <div class="container">
+      <div class="row">
+        <div class="col-md-2 col-sm-3 col-xs-12"> <a href="index.html" class="logo"><img width="300px" src="images/logo_name.png" alt="" /></a>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+          </div>
+          <div class="clearfix"></div>
+        </div>
+        <div class="col-md-10 col-sm-12 col-xs-12">
+          <div class="navbar navbar-default " role="navigation">
+            <div class="navbar-collapse collapse" id="nav-main">
+              <ul class="nav navbar-nav">
+                <li class="dropdown active"><a href="index.html">Home</a></li>
+                <li class="dropdown"><a href="#.">Startup Connect<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="{% url 'AttendanceManagement:internapplytpage' %}">Apply for Internship</a></li>
+                    <li><a href="{% url 'AttendanceManagement:postaninternship' %}">Post an Internship</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Workshops & Trainings</a></li>
+                <li class="dropdown"><a href="#.">Startup Support<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="{% url 'AttendanceManagement:requestservices' %}">Request Services</a></li>
+                    <li><a href="{% url 'AttendanceManagement:provideservices' %}provideserveices.html">Provide Services</a></li>
+                  </ul>
+                </li>
+                <li><a href="{% url 'account:candidate-login' %}"> Sign In</a></li>
+                <li><a href="{% url 'account:candidate-register' %}">Join</a></li>
+                <li><a href="{% url 'AttendanceManagement:contact-us' %}">Contact us</a></li>
+              </ul>
             </div>
             <div class="clearfix"></div>
-          </div>
-          <div class="col-md-10 col-sm-12 col-xs-12"> 
-            <div class="navbar navbar-default " role="navigation">
-              <div class="navbar-collapse collapse" id="nav-main">
-                <ul class="nav navbar-nav">
-                  <li class="dropdown active"><a class="navbar-brand" href="{% url 'techtable:index' %}"><span>Home</span></a></li>
-                  <li class="dropdown"><a href="#.">Startup Connect<span class="caret"></span></a> 
-                    <ul class="dropdown-menu">
-                      <li><a href="{% url 'techtable:internapplytpage' %}">Apply for Internship</a></li>
-                      <li><a href="{% url 'techtable:postaninternsip' %}">Post an Internship</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="#">Workshops & Trainings</a></li>
-                  <li class="dropdown"><a href="#.">Startup Support<span class="caret"></span></a> 
-                    <ul class="dropdown-menu">
-                      <li><a href="{% url 'techtable:requestservices' %}">Request Services</a></li>
-                      <li><a href="{% url 'techtable:provideserveices' %}">Provide Services</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="{% url 'techtable:contact-us' %}">Contact us</a></li>
-              </div>
-              <div class="clearfix"></div>
-            </div>
           </div>
         </div>
       </div>
     </div>
-  </header>
+        <!-- Header end -->
+</header>
