--- a/techtable_webapp/techtable/templates/techtable/footer.html
+++ b/techtable_webapp/techtable/templates/techtable/footer.html
@@ -1,5 +1,5 @@
-<!--Footer-->
 <footer id="footer">
+    <!--Footer-->
     <div class="footerWrap">
       <div class="container">
         <div class="row">
@@ -20,32 +20,33 @@
             <h5>Quick Links</h5>
             <!--Quick Links menu Start-->
             <ul class="quicklinks">
-              <li><a href="{% url 'account:login' %}">Login/Register</a></li>
+              <li><a href="#.">Login/Sign up</a></li>
               <li><a href="#.">Work at Startup</a></li>
               <li><a href="#.">Post an opportunity</a></li>
               <li><a href="#.">Success Stories</a></li>
               <li><a href="#.">Contact Us</a></li>
             </ul>
           </div>
-      <!--Quick Links menu end-->
-            <!--Contact us-->
-      <div class="col-md-4 col-sm-12">
-        <h5>Contact Us</h5>
-        <p style="color: white;">Taramani IIT Gate Rd,<br> Indian Institute Of Technology,<br> Chennai, Tamil Nadu<br> 600036</p><br>
-        <a href="mailto:connecttechtable@gmail.com"style="color: white;">connecttechtable@gmail.com</a><br><br>
-        <a href="tel:9940332489"style="color: white;">9940332489</a>
+          <!--Quick Links menu end-->
 
-        <div class="social">
-            <a href="https://www.facebook.com/techtable.co.in/" target="_blank"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
-            <a href="https://www.instagram.com/official_techtable/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://www.linkedin.com/company/tech-table/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <!--Contact us-->
+          <div class="col-md-4 col-sm-12">
+            <h5>Contact Us</h5>
+            <p style="color: white;">Taramani IIT Gate Rd,<br> Indian Institute Of Technology,<br> Chennai, Tamil Nadu<br> 600036</p><br>
+            <a href="mailto:connecttechtable@gmail.com"style="color: white;">connecttechtable@gmail.com</a><br><br>
+            <a href="tel:9940332489"style="color: white;">9940332489</a>
+
+            <div class="social">
+                <a href="https://www.facebook.com/techtable.co.in/" target="_blank"> <i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/official_techtable/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/company/tech-table/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+              </div>
           </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="copyright" style="color: white; background-color: rgb(46, 46, 46) !important;">
-  <a style="color: white;" href="developers.html">Developed with ❤ by our developers</a>
-</div>
-      <!--Footer end-->
+    <div class="copyright" style="color: white; background-color: rgb(46, 46, 46) !important;">
+      <a style="color: white;" href="developers.html">Developed with ❤ by our developers</a>
+    </div>
+    <!--Footer end-->
 </footer>
