--- a/techtable_webapp/techtable/templates/techtable/job-detail.html
+++ b/techtable_webapp/techtable/templates/techtable/job-detail.html
@@ -7,8 +7,9 @@
 
 {% block main_content %}
 
+
 <!-- Page Title start -->
-<section id="pageTitle">
+<div class="pageTitle">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-6">
@@ -19,10 +20,10 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 <!-- Page Title End -->
 
-<section id="listpgWraper">
+<div class="listpgWraper">
   <div class="container"> 
     
     <!-- Job Header start -->
@@ -36,7 +37,7 @@
           </div>
           <div class="col-md-4">
             <div class="companyinfo">
-              <div class="companylogo"><img src="images/employers/emplogo1.jpg" alt="your alt text"></div>
+              <div class="companylogo"><img src="{%static 'techtable/img/employers/emplogo1.jpg' %}" alt="your alt text"></div>
               <div class="title"><a href="#.">Forum International</a></div>
               <div class="ptext">Dubai, UAE</div>
               <div class="opening"><a href="#.">8 Current Jobs Openings</a></div>
@@ -45,7 +46,13 @@
           </div>
         </div>
       </div>
-      <div class="jobButtons"> <a href="applyforajob.html" class="btn apply"><i class="fa fa-paper-plane" aria-hidden="true"></i> Apply Now</a> <a href="applyforajob.html" class="btn"><i class="fa fa-envelope" aria-hidden="true"></i> Email to Friend</a> <a href="#." class="btn"><i class="fa fa-black-tie" aria-hidden="true"></i> Job Aleart</a> <a href="#." class="btn"><i class="fa fa-floppy-o" aria-hidden="true"></i> Save This Job</a> <a href="#." class="btn report"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report Abuse</a> </div>
+      <div class="jobButtons">
+        <a href="applyforajob.html" class="btn apply"><i class="fa fa-paper-plane" aria-hidden="true"></i> Apply Now</a> <a href="applyforajob.html" class="btn">
+<!--          <i class="fa fa-envelope" aria-hidden="true"></i> Email to Friend</a> <a href="#." class="btn">-->
+<!--        <i class="fa fa-black-tie" aria-hidden="true"></i> Job Aleart</a> <a href="#." class="btn">-->
+<!--        <i class="fa fa-floppy-o" aria-hidden="true"></i> Save This Job</a> <a href="#." class="btn report">-->
+        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i> Report Abuse</a>
+      </div>
     </div>
     
     <!-- Job Detail start -->
@@ -88,7 +95,7 @@
             <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="images/jobs/jobimg.jpg" alt="Job Name"></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name"></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -97,7 +104,7 @@
                 <div class="clearfix"></div>
               </div>
               <div class="col-md-4 col-sm-4">
-                <div class="listbtn"><a href="applyforajob.html">Apply Now</a></div>
+                <div class="listbtn"><a href="{% url 'techtable:applyforajob' %}">Apply Now</a></div>
               </div>
             </div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce venenatis arcu est. Phasellus vel dignissim tellus. Aenean fermentum fermentum convallis.</p>
@@ -108,7 +115,7 @@
             <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="images/jobs/jobimg.jpg" alt="Job Name"></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name"></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -128,7 +135,7 @@
             <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="images/jobs/jobimg.jpg" alt="Job Name"></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name"></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -243,24 +250,9 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 
 
-<!--Copyright-->
-<section id="copyright">
-  <div class="container">
-    <div class="bttxt">Copyright &copy; 2017 Your Company Name. All Rights Reserved. Design by: <a href="http://graphicriver.net/user/ecreativesol" target="_blank">eCreativeSolutions</a></div>
-  </div>
-</section>
 
-<!-- Bootstrap's JavaScript --> 
-<script src="{% static 'techtable/js/jquery-2.1.4.min.js' %}"></script>
-<script src="{% static 'techtable/js/bootstrap.min.js' %}"></script>
-
-<!-- Owl carousel --> 
-<script src="{% static 'techtable/js/owl.carousel.js' %}"></script>
-
-<!-- Custom js --> 
-<script src="{% static 'techtable/js/script.js' %}"></script>
 
 {% endblock %}
