--- a/techtable_webapp/techtable/templates/techtable/job-listing.html
+++ b/techtable_webapp/techtable/templates/techtable/job-listing.html
@@ -8,7 +8,7 @@
 {% block main_content %}
 
 <!-- Page Title start -->
-<section id="pageTitle">
+<div class="pageTitle">
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-sm-6">
@@ -19,10 +19,10 @@
       </div>
     </div>
   </div>
-</section>
+</div>
 <!-- Page Title End -->
 
-<section id="listpgWraper">
+<div class="listpgWraper">
   <div class="container"> 
     
     <!-- Page Title start -->
@@ -272,10 +272,10 @@
         <!-- Sponsord By -->
         <div class="sidebar">
           <h4 class="widget-title">Sponsord By</h4>
-          <div class="gad"><img src="{% static 'techtable/img/googlead.jpg' %}" alt="your alt text" /></div>
-          <div class="gad"><img src="{% static 'techtable/img/googlead.jpg' %}" alt="your alt text" /></div>
-          <div class="gad"><img src="{% static 'techtable/img/googlead2.jpg' %}" alt="your alt text" /></div>
-          <div class="gad"><img src="{% static 'techtable/img/googlead2.jpg' %}" alt="your alt text" /></div>
+          <div class="gad"><img src="{%static 'techtable/img/googlead.jpg' %}" alt="your alt text" /></div>
+          <div class="gad"><img src="{%static 'techtable/img/googlead.jpg' %}" alt="your alt text" /></div>
+          <div class="gad"><img src="{%static 'techtable/img/googlead2.jpg' %}" alt="your alt text" /></div>
+          <div class="gad"><img src="{%static 'techtable/img/googlead2.jpg' %}" alt="your alt text" /></div>
         </div>
       </div>
       <div class="col-md-6 col-sm-12"> 
@@ -285,7 +285,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -305,7 +305,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -325,7 +325,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -345,7 +345,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -365,7 +365,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -385,7 +385,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -405,7 +405,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -425,7 +425,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -445,7 +445,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -465,7 +465,7 @@
           <li>
             <div class="row">
               <div class="col-md-8 col-sm-8">
-                <div class="jobimg"><img src="{% static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
+                <div class="jobimg"><img src="{%static 'techtable/img/jobs/jobimg.jpg' %}" alt="Job Name" /></div>
                 <div class="jobinfo">
                   <h3><a href="#.">Technical Database Engineer</a></h3>
                   <div class="companyName"><a href="#.">Datebase Management Company</a></div>
@@ -507,24 +507,7 @@
       </div>
     </div>
   </div>
-</section>
-
-<!--Copyright-->
-<section id="copyright">
-  <div class="container">
-    <div class="bttxt">Copyright &copy; 2017 Your Company Name. All Rights Reserved. Design by: <a href="http://graphicriver.net/user/ecreativesol" target="_blank">eCreativeSolutions</a></div>
-  </div>
-</section>
-
-<!-- Bootstrap's JavaScript --> 
-<script src="{% static 'techtable/js/jquery-2.1.4.min.js' %}"></script>
-<script src="{% static 'techtable/js/bootstrap.min.js' %}"></script>
-
-<!-- Owl carousel --> 
-<script src="{% static 'techtable/js/owl.carousel.js' %}"></script>
-
-<!-- Custom js --> 
-<script src="{% static 'techtable/js/script.js' %}"></script>
+</div>
 
 
 {% endblock %}
